<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="4dp"
    tools:context="net.taitsmith.teatime.Type">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/black_tea_button"
        android:text="@string/tea_black"
        android:onClick="teaBlack"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/white_tea_button"
        android:text="@string/tea_white"
        android:layout_below="@+id/black_tea_button"
        android:onClick="teaWhite"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/green_tea_button"
        android:text="@string/tea_green"
        android:layout_below="@+id/white_tea_button"
        android:onClick="teaGreen"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/oolong_tea_button"
        android:text="@string/tea_oolong"
        android:layout_below="@+id/green_tea_button"
        android:onClick="teaOolong"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/other_tea_button"
        android:text="@string/tea_other"
        android:layout_below="@+id/oolong_tea_button"
        android:onClick="teaOther"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="choose by region"
        android:onClick="teaByRegion"/>

</RelativeLayout>

<!-- TODO fit on smaller screens -->
