<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.taitsmith.teatime.MainActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_text"
        android:textAllCaps="true"
        android:textSize="18dp"
        android:id="@+id/find_by"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/find_by"
        android:layout_centerHorizontal="true"
        android:id="@+id/region_button"
        android:text="@string/region_button"
        android:onClick="teaByRegion"
        android:background="@color/colorPrimaryDark"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/region_button"
        android:layout_centerHorizontal="true"
        android:id="@+id/type_button"
        android:text="@string/type_button"
        android:onClick="teaByType"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/region_button"
        android:layout_centerHorizontal="true"
        android:id="@+id/help_button"
        android:text="@string/type_button"
        android:onClick="teaByType"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="8dp"/>

</RelativeLayout>
